feat: enable frontend request handling
Enables handling requests from the frontend, with redirects to the created objects.
